--- a/index.html
+++ b/index.html
@@ -4,13 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Name of chosen challenge</title>
+    <title>Phonie</title>
 
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
-    <h2>make some magic here!!</h2>
+  <nav>
+        <!-- <button class=""><a class="active" href="#">Home</a></button> -->
+    </nav>
+    <div class="container">
+        <section>
+            <h1>Phonie</h1>
+            <h4><p>..know your network</p></h4>
+            <form action="submit" method="get">
+                <input type="text" name="Full Name" placeholder="Full Name" required> <br><br>
+                <input type="email" name="email" placeholder="Email" required> <br><br>
+                <!-- Tel. Number <br>
+                 <select id="network">
+                    <option>MTN</option>
+                    <option>Airtel</option>
+                    <option>Etisalat</option>
+                    <option>Glo</option>
+                </select> -->
+                <input id="network" type="tel" name="tel" placeholder="01867828238"> <br>
+                <button class="button">Submit</button>
+            </form>
+        </section>
+    </div>
 
     <!-- // ============= EEND DO NOT EDIT ============== // -->
     <script src="index.mjs" type="module"></script>
